<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/customer_details_form_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_new_product_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/add_new_product_heading"
        android:gravity="center"
        android:text="@string/add_new_product_heading"
        android:textColor="@color/add_new_product_heading_title"
        android:textSize="@dimen/add_new_product_heading"
        android:textStyle="bold"
        android:visibility="visible" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_new_product_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_new_product_name_hint"
                android:inputType="textPersonName"
                android:padding="@dimen/add_new_product" />

            <EditText
                android:id="@+id/add_new_product_quantity_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_new_product_quantity_hint"
                android:inputType="number"
                android:padding="@dimen/add_new_product" />

            <EditText
                android:id="@+id/add_new_product_price_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_new_product_price_hint"
                android:inputType="number"
                android:padding="@dimen/add_new_product" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/new_product_image"
                android:contentDescription="@string/product_image_description" />

            <Button
                android:id="@+id/add_image_of_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical|center"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="center|center_vertical|center_horizontal"
                android:text="@string/add_image_of_product_button" />

            <Button
                android:id="@+id/submit_product_details_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical|center"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="center|center_vertical|center_horizontal"
                android:text="@string/submit_product_details_button" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
