<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="com.example.suketurastogi.inventoryapp.DetailsActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/product_image"
        android:contentDescription="@string/product_image_description"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/product_name_text_view"
        tools:text="Product Name"
        android:layout_below="@+id/product_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/products_quantity_text_view"
        tools:text="Product Quantity"
        android:layout_alignTop="@+id/product_name_text_view"
        android:layout_alignRight="@+id/received_shipment_button"
        android:layout_alignEnd="@+id/received_shipment_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/products_price_text_view"
        tools:text="Product Price"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/product_name_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/products_sale_text_view"
        tools:text="Product Sale"
        android:layout_alignTop="@+id/products_price_text_view"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track_sale_button_text"
        android:id="@+id/track_sale_button"
        android:layout_below="@+id/products_sale_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/received_shipment_button_text"
        android:id="@+id/received_shipment_button"
        android:layout_below="@+id/products_sale_text_view"
        android:layout_alignRight="@+id/products_sale_text_view"
        android:layout_alignEnd="@+id/products_sale_text_view" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_from_the_supplier_text_button"
        android:id="@+id/order_supplier_button"
        android:layout_below="@+id/track_sale_button"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_entire_product_record_text_button"
        android:id="@+id/delete_entire_product_record_button"
        android:layout_below="@+id/order_supplier_button"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
