<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/products_list_heading_text_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@color/products_list_heading"
            android:gravity="center"
            android:text="@string/products_list_heading"
            android:textColor="@color/products_list_heading_title"
            android:textSize="@dimen/products_list_heading"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/no_products_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical|center"
        android:gravity="center|center_vertical|center_horizontal"
        android:text="@string/no_products_message"
        android:textSize="@dimen/no_products_message" />

    <Button
        android:id="@+id/add_new_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical|center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center|center_vertical|center_horizontal"
        android:text="@string/add_new_product_button" />

    <ListView
        android:id="@+id/products_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="true"
        android:orientation="vertical" />

</LinearLayout>